<resources>
  <string name="app_name">Reddit Now</string>
  <string name="oauth_login_success">Login succeeded</string>
  <string name="oauth_login_failed">Login failed. Please try again.</string>

  <string name="userless_authenticate_explanation">
    Reddit Now! requires authentication with Reddit service before it can read your subreddits.\n\nPlease click the button below to start authentication process.
  </string>
  <string name="userless_authenticate">Authenticate</string>
  <string name="oauth_warning">Warning: The web page can be SLOW to respond! Be patient after you click on the button. Sometimes it can take up to a minute!</string>

  <string name="vh_subreddit_name">r/%1$s</string>
  <string name="vh_subreddit_members">%1$d members</string>
  <string name="vh_post_username">u/%1$s</string>
  <string name="vh_duration_days">%1$dd ago</string>
  <string name="vh_duration_hours">%1$dh ago</string>
  <string name="vh_duration_minutes">%1$dm ago</string>
  <string name="all_caught_up">All Caught Up!</string>
  <string name="menu_search">Search</string>
  <string name="menu_settings">Settings</string>
  <string name="search_query_hint">search subreddits</string>
  <string name="search_empty_query_warning">Query text cannot be empty</string>
  <string name="subreddit_follow">Follow subreddit</string>
  <string name="subreddit_unfollow">Stop following subreddit</string>

  <!-- Settings -->
  <string name="pref_category_home">Home Feed</string>
  <string name="pref_category_account">Account</string>
  <string name="pref_number_show_title">Number to show</string>
  <string name="pref_number_show_summary">Select how many posts to show for each subreddit in main screen</string>
  <string name="pref_number_fetch_title">Number to download</string>
  <string name="pref_number_fetch_summary">Select how many posts to download for each subreddit in main screen. Please note that the higher the value is, the longer it takes to download.</string>
  <string name="pref_account_title">Log out</string>
  <string name="pref_account_summary">Currently logged in as %1$s</string>
  <string name="pref_account_message">Do you really want to log out?</string>
  <string name="pref_account_yes">Yes, I do!</string>
    <string name="widget_empty_message">Please log in to view subreddits.</string>
    <string name="widget_title">Subreddits</string>

    <string-array name="number_show_entries">
    <item>1 posts</item>
    <item>2 posts</item>
    <item>3 posts</item>
  </string-array>

  <string-array name="number_show_entries_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="number_fetch_entries">
    <item>3 posts</item>
    <item>4 posts</item>
    <item>5 posts</item>
  </string-array>

  <string-array name="number_fetch_entries_values">
    <item>3</item>
    <item>4</item>
    <item>5</item>
  </string-array>

</resources>
